docs: 알고 코드암기 게시물

--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -47,6 +47,13 @@ typora-root-url: ../../..
   - 복잡도 너무큰데 해결안되면 **"DP(for, memoi)"** 고려 -> **"[DP 여러가지 유형](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#dp-%EB%8B%A4%EC%96%91%ED%95%9C-%EC%9C%A0%ED%98%95)"**
   - **최단거리** 같으면 **"BFS와 다익스트라, 플로이드"** 고려 (각각 상황에 맞게 사용하게 됨)
     - [최단 경로 트리](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%B5%9C%EB%8B%A8-%EA%B2%BD%EB%A1%9C-%ED%8A%B8%EB%A6%AC), [보는김에 이것도 확인 -> 최소 신장 트리](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%B5%9C%EC%86%8C-%EC%8B%A0%EC%9E%A5-%ED%8A%B8%EB%A6%ACmst)
+  - **"그래프"**, 트리 종류 같다면?? 아래 필수 고려(+BFS, DFS)
+    - **정점** 중심 : **인접행렬(밀집행렬) or 인접리스트(희소행렬)** 
+      - 최소신장트리 : 프림(우선순위 큐)
+      - 최단경로 : 다익스트라(우선순위 큐+new dist배열), 플로이드(3중 for문+new 인접행렬)
+    - **간선** 중심 : **간선리스트**
+      - 최소신장트리 : 크루스칼(Union find)
+      - 최단경로 : 벨만포드
   - 완.탐, 순.조.부, 최단경로 . . . -> 다양한 예시 참고
     - [BFS, DFS -> 최단거리는 꼭 "BFS"!!](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#bfs-dfs---%EC%B5%9C%EB%8B%A8%EA%B1%B0%EB%A6%AC%EB%8A%94-%EA%BC%AD-bfs)
     - [백트래킹(Backtracking) -> DFS(재귀) 사용중](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EB%B0%B1%ED%8A%B8%EB%9E%98%ED%82%B9backtracking---dfs%EC%9E%AC%EA%B7%80-%EC%82%AC%EC%9A%A9%EC%A4%91)
@@ -86,19 +93,25 @@ typora-root-url: ../../..
     - 이진트리 - 자식2개씩 / 포화이진트리 - 꽉찬것 / 완전이진트리 - "왼쪽"부터 이진트리
   - **그래프 -> "중복방문(visited) 주의"**
   - **최단경로트리 vs 최소신장트리**
-    - 비슷한 것 같지만 "서로를 보장하지 않음"   
+    - 비슷한 것 같지만 "서로를 보장(관계)하지 않음"   
       -> 최단경로라면 꼭 최소신장이고 이런 관계까지 보장하지는 않는다는 것
-    - **최단경로트리** -> 멀리 돌아가더라도 **거리(가중치)가 짧은것**
+    - **최단경로트리** -> 멀리 돌아가더라도 **거리(가중치)가 가장 짧은것**
       - [최단 경로 트리](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%B5%9C%EB%8B%A8-%EA%B2%BD%EB%A1%9C-%ED%8A%B8%EB%A6%AC)
-      - **다익스트라(코드기억)** : **하나의 정점**에서 다른 모든 정점으로의 최단경로 -> **우선순위 큐 + 최소거리 배열**
-      - **플로이드(코드기억)** : **모든 정점**에서 다른 모든 정점으로의 최단경로 -> **3중 for문 + 인접행렬**
+      - **다익스트라(코드기억)** : **하나의 정점**에서 다른 **모든 정점**으로의 최단경로 -> **우선순위 큐 + 최소거리 배열**
+        - TIP1) X->N 경로 입력 주어지고, 역방향으로 일부러 입력받고아서 N->X였던것을 X-N으로 최단경로구하면 결국 N->X로 최단경로 구해진 값과 동일하다는 개념 (X로 가는 최단경로)
+        - TIP2) N->X 최단경로를 구할 때 차라리 다익스트라를 N번 하는것도 방법 -> N*ElgE 복잡도
+      - **플로이드(코드기억)** : **모든 정점**에서 다른 **모든 정점**으로의 최단경로 -> **3중 for문 + 인접행렬**
       - 벨만포드 : 다익스트라는 양수만, 벨만포드는 음수도 최단경로 사용 가능
         - 근데, 벨만포드까지는 코테 잘 안나올것 같아서 나중에 시간나면 보는걸로..
-    - **최소신장트리** -> 돌아가는것을 고려하지 않고 **인접 정점들 중 거리(가중치)가 가장 짧은것**  
+    - **최소신장트리** -> 돌아가는것을 고려하지 않고 **인접 정점들 중 거리(가중치)가 가장 짧은것**   
+      **사이클X로 모든노드 연결**된 상태 -> 루트노드는 모든노드에 연결 되므로 루트노드 갈 수 있으면 **"신장트리"**가 될 수 있다.  
       최소신장트리는 모든 정점을 **"연결"하는데 의의**가 있다.
       - [최소 신장 트리](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%B5%9C%EC%86%8C-%EC%8B%A0%EC%9E%A5-%ED%8A%B8%EB%A6%ACmst)
       - **프림(코드기억)** -> 우선순위 큐
       - **크루스칼(코드기억)** -> Union find
+        - TIP1) 모든 노드를 조회하는데 최악이나 최선의 비용일 때 MST 활용  
+          [백준13418](https://www.acmicpc.net/problem/13418) 의 경우 "오르막길(최악)", "내리막길(최선)"을 각각 **1, 0으로 임의로 입력**받고,  
+          임의로 입력받은 간선을 **"오름차순, 내림차순"으로 따로 정렬**후 MST를 각각 진행해서 최선, 최악 비용을 구해낼 수 있다.
 - **위상정렬(코드기억)** -> 간단하니 이것도 기억해두자..! -> [위상정렬](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%9C%84%EC%83%81-%EC%A0%95%EB%A0%AC)
 - +참고) 최장 증가 부분 수열(LIS) + LCS(공통) 까지도 참고 -> increasing, common
 
@@ -2471,10 +2484,27 @@ static class Pair {
 
 **그래프는 인접행렬과 인접리스트로 표현할 수 있다.**
 
+**추가로 간선리스트로도 표현 가능하다.**
+
 * **보통 인접리스트 사용이 많며 E가 V^2보다 훨씬 작을 때(sparse=희소) 사용한다.**
 * `모든 간선 길이가 동일` 하면 "BFS"로 거리를 구할 수 있고, `길이가 다르다면` "플로이드, 다익스트라" 알고리즘을 활용해야 한다.
   * (뇌피셜) 물론 객체에 거리 담아서 BFS 순회하면 거리계산 되긴 할것이다.
 
+**간선리스트 작성 예시**
+
+```java
+List<int[]> list = new ArrayList<>();
+for(int i=0; i<M; i++) {
+    stk = new StringTokenizer(br.readLine());
+    int v1 = Integer.parseInt(stk.nextToken());
+    int v2 = Integer.parseInt(stk.nextToken());
+    int c = Integer.parseInt(stk.nextToken());
+    list.add(new int[] {v1,v2,c}); // 인접리스트 보다도 더 간단한 형태
+}
+for(int i=0; i<M; i++) {
+    System.out.println(Arrays.toString(list.get(i)));
+}
+```
 
 <br>
 
@@ -2522,6 +2552,7 @@ static void bfs(int n){
 
 ```java
 static List<List<Integer>> adjList = new ArrayList<>();
+static List<List<int[]>> adjList2 = new ArrayList<>(); // 따로 class 안만들고 int배열...
 static boolean[] visit;
 static StringBuilder sb = new StringBuilder();
 public static void main(String[] args) {
@@ -2532,6 +2563,7 @@ public static void main(String[] args) {
     adjList.get(2).add(3); adjList.get(2).add(4);
     adjList.get(3).add(2);
     adjList.get(4).add(3);
+	adjList2.get(1).add(new int[] {1,2,3}); // 이런 문법식도 있다.
     
     visit = new boolean[5];
     bfs(1);
@@ -3281,7 +3313,7 @@ static class Pair implements Comparable<Pair>{
 * **예전에 정리한 개념글 : [Floyd](https://bh946.github.io/algorithm/(%EA%B0%9C%EB%85%90)-Dynamic_Programming(%EB%8F%99%EC%A0%81%EA%B3%84%ED%9A%8D%EB%B2%95)/#%EC%B5%9C%EB%8B%A8%EA%B1%B0%EB%A6%ACfloyd), [Dijkstra](https://bh946.github.io/algorithm/(%EA%B0%9C%EB%85%90)-Greedy-Algorithm(%ED%83%90%EC%9A%95%EC%A0%81%EC%9D%B8-%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98)/#dijkstra%EB%8B%A4%EC%9D%B5%EC%8A%A4%ED%8A%B8%EB%9D%BC)**
 * **유형**
   * 거리가 일정??? `BFS` 로 최단 거리 구하기
-  * 거리가 다르다??? `플로이드(모든정점-n^3) or 다익스트라(하나의정점-n^2)` 로 구하기
+  * 거리가 다르다??? `플로이드(모든정점-N^3) or 다익스트라(하나의정점-ElgE)` 로 구하기
     * `다익스트라` 의 경우 가중치 음수는 사용 못하는데, 이땐 `벨만포드` 알고리즘이라는 것을 사용한다. (필요시 공부해 볼 것)
     * **중요한점**  
       `플로이드` 는 모든 정점에서 모든 정점과의 최단 경로를 구하고,  
@@ -3292,21 +3324,23 @@ static class Pair implements Comparable<Pair>{
 
 <br>
 
-**`플로이드 알고리즘`은 모든 정점 쌍 사이의 최단 경로를 구하는 알고리즘이라 O(n<sup>3</sup>)의 큰 복잡도를 가진다.  
-다만, 구현이 3중 for문으로 간단히 할 수 있으며 n이 1000정도면 이 알고리즘을 써도 된다.**
+`플로이드 알고리즘`은 모든 정점 쌍 사이의 최단 경로를 구하는 알고리즘이라 O(n<sup>3</sup>)의 큰 복잡도를 가진다.  
+다만, 구현이 3중 for문으로 간단히 할 수 있으며 n이 1000정도면 이 알고리즘을 써도 된다.
 
 * 최단 거리 테이블(2차원) 이 채워진다 => 코드보면 d배열 관련인데 생각보다 쉬운 로직!
 * 근데, 경로까지 구하고싶으면 테이블 하나 더 만들어서 기록해놔야 한다 => nxt배열에 기록
 
-![image-20230506013350391](/images/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp/image-20230506013350391.png)
+![image-20230506013350391](/images/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp/image-20230506013350391.png) 
 
-![image-20230506013359812](/images/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp/image-20230506013359812.png)
+![image-20230506013359812](/images/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp/image-20230506013359812.png) 
 
 <br>
 
 ```java
 // BOJ 11780
 // n이 100이라 플로이드 가능
+// 3중 for문에서 k순서가 제일 처음이란걸 꼭 기억
+// run 주석 부분이 핵심@@@
 public static int[][] d = new int[105][105];
 public static int[][] p = new int[105][105];
 public static int n, m;
@@ -3319,7 +3353,7 @@ public static void main(String[] args) throws IOException {
     stk = new StringTokenizer(br.readLine());
     m = Integer.parseInt(stk.nextToken());
     for(int i = 1 ; i<=n ;i++) {
-        Arrays.fill(d[i], 10000000);
+        Arrays.fill(d[i], 10000000); // init 플로이드
     }
     for(int i = 1; i<=m; i++){
         stk = new StringTokenizer(br.readLine(), " ");
@@ -3328,6 +3362,7 @@ public static void main(String[] args) throws IOException {
         int c = Integer.parseInt(stk.nextToken());
         d[a][b] = Math.min(d[a][b], c);
         p[a][b] = b; // 경유 경로 기록
+
     }
     for(int i = 1; i<=n;i++) d[i][i] = 0; // 자기 자신의 경로는 당연히 비용 0
 
@@ -3336,7 +3371,8 @@ public static void main(String[] args) throws IOException {
         for(int i = 1; i<=n; i++) { // i->j 를 가는 경로 비용을 구하는것
             for(int j = 1; j<=n; j++) {
                 if(d[i][k]+d[k][j] < d[i][j]){
-                    d[i][j] = Math.min(d[i][j], d[i][k]+d[k][j]);
+                    //d[i][j] = Math.min(d[i][j], d[i][k]+d[k][j]);
+                    d[i][j] = d[i][k]+d[k][j];
                     p[i][j] = p[i][k]; // 경유 경로 기록
                 }
             }
@@ -3344,7 +3380,7 @@ public static void main(String[] args) throws IOException {
     }
 
     // output => 출력이 여러개 있음.
-    StringBuilder sb = new StringBuilder(); // 가중치 출력
+    StringBuilder sb = new StringBuilder(); // 가중치
     for(int i = 1 ; i<=n;i++){
         for(int j = 1; j<=n; j++){
             if(d[i][j] == 10000000) sb.append(0).append(' ');
@@ -3356,7 +3392,7 @@ public static void main(String[] args) throws IOException {
 
     for(int i = 1; i<=n; i++) {
         for(int j = 1; j<=n; j++) {
-            sb = new StringBuilder(); // 경로 출력
+            sb = new StringBuilder(); // 경로
             if(d[i][j] == 0 || d[i][j] == 10000000) {
                 System.out.println(0);
                 continue;
@@ -3378,7 +3414,7 @@ public static void main(String[] args) throws IOException {
 
 <br>
 
-**`다익스트라 알고리즘 `은 하나의 정점으로부터 다른 모든 정점까지의 최단 거리를 구하는 알고리즘이므로 복잡도는 플로이드보다 한단계 작은 O(n<sup>2</sup>) 이다.**
+`다익스트라 알고리즘 `은 하나의 정점으로부터 다른 모든 정점까지의 최단 거리를 구하는 알고리즘이므로 복잡도는 플로이드보다 한단계 작은 O(n<sup>2</sup>) 이다.
 
 * 참고 : 가중치가 음의 값이 있으면 이 알고리즘 사용 불가
 * 동작원리는 간단한데 한 정점에서 갈 수 있는 최단 거리 정점을 택하면서 갱신해나가면 된다.
@@ -3386,25 +3422,26 @@ public static void main(String[] args) throws IOException {
   * 우선순위 큐에 거리를 다 넣어둔다음 매번 최소인걸 선택하는 로직
   * 물론 경로까지 구하는 방법은 플로이드 알고리즘 때와 유사
 
-![image-20230506014449754](/images/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp/image-20230506014449754.png)
+![image-20230506014449754](/images/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp/image-20230506014449754.png) 
 
-![image-20230506015237505](/images/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp/image-20230506015237505.png)
+![image-20230506015237505](/images/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp/image-20230506015237505.png) 
 
-![image-20230506015246272](/images/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp/image-20230506015246272.png)
+![image-20230506015246272](/images/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp/image-20230506015246272.png) 
 
 ```java
 /**
  * BOJ 11779
  * 참고 : 다익스트라 특성상 경로를 여러개 구할 수 있기 때문에, 어떤 경로든 백준에서 정답 처리한다.
+ * run 주석 부분이 핵심@@@
  */
 static int[] d = new int[1005]; // 최단 거리 테이블
 static int[] pre = new int[1005]; // 이전 경로 기록
 
 public static void main(String[] args) throws IOException {
-    Arrays.fill(d, 100000000);
+    Arrays.fill(d, 100000000); // 거리배열 초기화
     List<Pair>[] inArr = new ArrayList[1005];
     for(int i = 0 ; i<1005; i++) inArr[i] = new ArrayList<>();
-    PriorityQueue<Pair> pq = new PriorityQueue<>(Pair::compareTo); // 최소힙
+    PriorityQueue<Pair> pq = new PriorityQueue<>(); // 최소힙
 
     BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
     StringTokenizer stk = new StringTokenizer(br.readLine());
@@ -3425,14 +3462,12 @@ public static void main(String[] args) throws IOException {
 
     // run
     d[st] = 0; // 시작 노드는 가중치 0
-    pq.add(new Pair(st, d[st])); // 도착노드, 가중치
+    pq.add(new Pair(st, d[st])); // 시작노드, 가중치 추가
     while(!pq.isEmpty()) {
-        Pair cur = pq.peek(); pq.remove();
-        // 예로 시작 노드 d[st]가 0인지 먼저 확인
-        // => 일치하지 않으면 큐에있는 cur 은 최단 거리가 아닌 원소라 continue
-        if(d[cur.v] != cur.w) continue;
+        Pair cur = pq.poll();
+        if(d[cur.v] != cur.w) continue; // 기존 거리배열의 비용과 우선순위큐 비용이 다르면 PASS -> 해당 우선순위큐 값은 버려야함. 최단 거리가 아닌 원소이기 때문
         for(Pair nxt : inArr[cur.v]) {
-            if(d[nxt.v] <= d[cur.v]+nxt.w) continue; // 거리 비교
+            if(d[nxt.v] <= d[cur.v]+nxt.w) continue; // 기존 거리배열의 비용이 새로운 비용보다 작으면 최소비용이므로 PASS
             d[nxt.v] = d[cur.v]+nxt.w;
             pq.add(new Pair(nxt.v, d[nxt.v]));
             pre[nxt.v] = cur.v; // 이전 경로 기록
@@ -3456,19 +3491,17 @@ public static void main(String[] args) throws IOException {
     }
     System.out.println(sb);
 }
-static class Pair {
+static class Pair implements Comparable<Pair>{
     private int v; // 도착노드
     private int w; // 가중치
     public Pair(int v, int w) {
         this.v = v;
         this.w = w;
     }
-    // 우선순위 큐 비교 직접 커스텀
-    public int compareTo(Pair p) {
-        if(this.w < p.w) {
-            return -1;
-        }
-        return 1;
+    // 우선순위 큐 비교 오버라이딩
+    @Override
+	public int compareTo(Pair o) {
+		return this.w-o.w; //비용 오름차순 (가장 작은것이 먼저나오게)
     }
 }
 ```
