docs:코드암기용 게시물

--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -353,7 +353,7 @@ Intro에서도 언급했지만, 본인의 경우 **완.탐 복잡도**라면 **"
             if(visited[i]) continue;
             visited[i]=true;
     		outArr[depth] = i;
-            dfs(depth+1);
+            perm(depth+1);
             visited[i]=false; //backtracking
         }
     }
@@ -364,7 +364,7 @@ Intro에서도 언급했지만, 본인의 경우 **완.탐 복잡도**라면 **"
         }
         for(int i=1; i<=N; i++) {
     		outArr[depth] = i;
-            dfs(depth+1);
+            perm(depth+1);
         }
     }
     ```
@@ -433,23 +433,23 @@ Intro에서도 언급했지만, 본인의 경우 **완.탐 복잡도**라면 **"
 
   - ```java
     // 조합 nCm
-    perm(int depth, int idx) {
+    comb(int depth, int idx) {
         if(depth == M) {
             // 조합 생성 완료
         }
         for(int i=1; i<=N; i++) {
     		outArr[depth] = i;
-            dfs(depth+1, i+1);
+            comb(depth+1, i+1);
         }
     }
     // 중복조합
-    perm(int depth, int idx) {
+    comb(int depth, int idx) {
         if(depth == M) {
             // 중복조합 생성 완료
         }
         for(int i=1; i<=N; i++) {
     		outArr[depth] = i;
-            dfs(depth+1, i); // 이 차이밖에 없음. 한끗차이
+            comb(depth+1, i); // 이 차이밖에 없음. 한끗차이
         }
     }
     // 참고) 조합 또다른 방식
