--- a/_posts/Coding_Test/Baekjoon_Concept/2024-02-17-(백준_필수4)알고리즘 필수 코드암기.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2024-02-17-(백준_필수4)알고리즘 필수 코드암기.md
@@ -25,6 +25,56 @@ typora-root-url: ../../..
 **BFS, DFS, 순열, 조합, 부분집합**
 
 ```java
+/**
+ * BFS : 너비순회
+ * 2차원 좌표상에 4방향 BFS 순회 구해보라. (중복방문 방지)
+ */
+  static int[] dx = {0,1,0,-1}; //오,아,왼,위
+  static int[] dy = {1,0,-1,0}; //오,아,왼,위
+  static void bfs(int cx, int cy) {
+  }
+  static class Pair4 {
+    int x; int y;
+    public Pair4(int x, int y){
+      this.x=x;this.y=y;
+    }
+  }
+
+/**
+ * DFS : 깊이순회
+ * 생략. -> 아래 순.조.부 를 DFS 재귀형태로 구했기 때문
+ */
+
+/**
+ * 순열 : "순서(자리)" 가 의미 있게 나열 -> visited 활용(백트래킹)
+ * 중복순열 : "+중복" -> visited 없이
+ */
+  // 순열 nPm
+  static int N,M;
+  static boolean[] visited;
+  static int[] outArr;
+  static void perm(int depth) {
+  }
+  // 중복순열
+  static void permDup(int depth) {
+  }
+
+/**
+ * 조합 : "순서(자리)" 가 의미 없음 -> idx+1 (visited 없이)
+ * 중복조합 : "+중복" -> idx
+ */
+  // 조합 nCm
+  static void comb(int depth, int idx) {
+  }
+  // 참고) 조합 또다른 방식
+  //comb(depth+1, idx+1); // 현재 선택 OK 다음 자리 이동
+  //comb(depth, idx+1); // 현재 선택 X
+
+/**
+ * 부분집합 : nC0+nC1+...+nCn 즉, 조합과 유사 ("있다 or 없다") 경우의 수 -> visited의 T/F 에 재귀 2개
+ */
+  static void subset(int depth) {
+  }
 ```
 
 <br>
@@ -40,7 +90,7 @@ typora-root-url: ../../..
     int[][] input = {{1, 3}, {2, 3}}; // output:1 2 3
     //...
 
-
+  }
 
 /**
  * 플로이드 : 모든정점->모든정점 최단경로
@@ -51,7 +101,7 @@ typora-root-url: ../../..
     int[][] input = {{1,2,4},{1,3,2},{1,4,7},{2,1,1},{2,3,5},{3,1,2},{3,4,4},{4,2,3}};
     //...
 
-
+  }
 
 /**
  * 다익스트라 : 1개정점->모든정점 최단경로
@@ -63,6 +113,7 @@ typora-root-url: ../../..
     int[][] input = {{1,2,4},{1,3,2},{1,4,7},{2,1,1},{2,3,5},{3,1,2},{3,4,4},{4,2,3}};
     //...
 
+  }
 
 /**
  * 프림 : MST -> 최소 비용 정점을 선택해 나가는 방식
@@ -74,7 +125,8 @@ typora-root-url: ../../..
     int M = 5;
     int[][] input = {{0, 1, 1}, {1, 2, 0}, {1, 4, 0}, {4, 2, 1}, {3, 4, 1}, {2, 3, 0}};
     //...
-      
+    
+  }
 
 /**
  * 크루스칼 : MST -> 간선 가중치를 비내림차순 정렬 후 순서대로 선택하는 방식
@@ -86,6 +138,8 @@ typora-root-url: ../../..
     int M = 5;
     int[][] input = {{0, 1, 1}, {1, 2, 0}, {1, 4, 0}, {4, 2, 1}, {3, 4, 1}, {2, 3, 0}};
     //...
+      
+  }
 ```
 
 <br><br>
@@ -95,6 +149,119 @@ typora-root-url: ../../..
 **BFS, DFS, 순열, 조합, 부분집합**
 
 ```java
+/**
+ * BFS : 너비순회
+ * 2차원 좌표상에 4방향 BFS 순회 구해보라. (중복방문 방지)
+ */
+  static int[] dx = {0,1,0,-1}; //오,아,왼,위
+  static int[] dy = {1,0,-1,0}; //오,아,왼,위
+  static void bfs(int cx, int cy) {
+    int level=0; int width=0; // level, width 는 그냥 참고용으로 넣음
+    boolean[][] visited = new boolean[5][5];
+    Queue<Pair4> qu = new ArrayDeque<>();
+    qu.offer(new Pair4(cx, cy));
+    visited[cx][cy] = true;
+    while(!qu.isEmpty()) {
+      int size = qu.size();
+      level++;
+      for(int s=0; s<size; s++){
+        Pair4 cur = qu.poll();
+        width++;
+        for(int i=0; i<4; i++){
+          int nx=cur.x+dx[i];
+          int ny=cur.y+dy[i];
+          if(nx<0||ny<0||nx>5||ny>5) continue;
+          if(visited[nx][ny]) continue;
+          qu.offer(new Pair4(nx, ny)); //큐삽입시점 중요
+          visited[nx][ny]=true; //방문시점 마찬가지
+        }
+      }
+    }
+  }
+  static class Pair4 {
+    int x; int y;
+    public Pair4(int x, int y){
+      this.x=x;this.y=y;
+    }
+  }
+
+/**
+ * DFS : 깊이순회
+ * 생략. -> 아래 순.조.부 를 DFS 재귀형태로 구했기 때문
+ */
+
+
+/**
+ * 순열 : "순서(자리)" 가 의미 있게 나열 -> visited 활용(백트래킹)
+ * 중복순열 : "+중복" -> visited 없이
+ */
+  // 순열 nPm
+  static int N,M;
+  static boolean[] visited;
+  static int[] outArr;
+  static void perm(int depth) {
+    if(depth == M) {
+      // 순열 생성 완료
+    }
+    for(int i=1; i<=N; i++) {
+      if(visited[i]) continue;
+      visited[i]=true;
+      outArr[depth] = i;
+      perm(depth+1);
+      visited[i]=false; //backtracking
+    }
+  }
+  // 중복순열
+  static void permDup(int depth) {
+    if(depth == M) {
+      // 중복순열 생성 완료
+    }
+    for(int i=1; i<=N; i++) {
+      outArr[depth] = i;
+      permDup(depth+1);
+    }
+  }
+
+/**
+ * 조합 : "순서(자리)" 가 의미 없음 -> idx+1 (visited 없이)
+ * 중복조합 : "+중복" -> idx
+ */
+  // 조합 nCm
+  static void comb(int depth, int idx) {
+    if(depth == M) {
+      // 조합 생성 완료
+    }
+    for(int i=1; i<=N; i++) {
+      outArr[depth] = i;
+      comb(depth+1, i+1);
+    }
+  }
+  // 중복조합
+  static void combDup(int depth, int idx) {
+    if(depth == M) {
+      // 중복조합 생성 완료
+    }
+    for(int i=1; i<=N; i++) {
+      outArr[depth] = i;
+      comb(depth+1, i); // 이 차이밖에 없음. 한끗차이
+    }
+  }
+  // 참고) 조합 또다른 방식
+  //comb(depth+1, idx+1); // 현재 선택 OK 다음 자리 이동
+  //comb(depth, idx+1); // 현재 선택 X
+
+/**
+ * 부분집합 : nC0+nC1+...+nCn 즉, 조합과 유사 ("있다 or 없다") 경우의 수 -> visited의 T/F 에 재귀 2개
+ */
+  static void subset(int depth) {
+    if(depth == N) {
+      // 부분집합 완성
+    }
+    visited[depth] = true;
+    subset(depth+1);
+    visited[depth] = false;
+    subset(depth+1);
+  }
 
 ```
 
@@ -327,6 +494,68 @@ typora-root-url: ../../..
     int M = 5;
     int[][] input = {{0, 1, 1}, {1, 2, 0}, {1, 4, 0}, {4, 2, 1}, {3, 4, 1}, {2, 3, 0}};
     //...
+    List<Pair3> edges1 = new ArrayList<>();
+    List<Pair3> edges2 = new ArrayList<>();
+    Pair3[] outArr1 = new Pair3[N+1];
+    Pair3[] outArr2 = new Pair3[N+1];
+    for(int i=0; i<M+1; i++){ // 입력정점
+      int parent = input[i][0];
+      int child = input[i][1];
+      int cost = input[i][2];
+      edges1.add(new Pair3(parent,child,cost)); //최악경로비용
+      edges2.add(new Pair3(parent,child,cost)); //최선경로비용
+    }
+    Collections.sort(edges1, (o1, o2) -> Integer.compare(o1.cost, o2.cost)); //asc
+    Collections.sort(edges2, (o1, o2) -> Integer.compare(o2.cost, o1.cost)); //desc
+    //1.최악경로비용
+    Arrays.fill(p, -1);
+    int idx=0;
+    for(Pair3 edge : edges1){
+      if(isUnion(edge.parent, edge.child)) continue;
+      outArr1[idx++] = edge;
+//      if(idx==N) break; //입구 포함이므로(0포함), 간선 개수가 N
+    }
+    int result1=0;
+    for(int i=0; i<idx; i++){ // i=0부터
+      if(outArr1[i].cost == 1) continue; // 1은 내리막길
+      result1 += 1; // 오르막길 개수 추가
+    }
+    //2.최선경로비용
+    Arrays.fill(p, -1);
+    idx=0;
+    for(Pair3 edge : edges2){
+      if(isUnion(edge.parent, edge.child)) continue;
+      outArr2[idx++] = edge;
+//      if(idx==N) break; //입구 포함이므로(0포함), 간선 개수가 N
+    }
+    int result2=0;
+    for(int i=1; i<idx; i++){ // i=0부터
+      if(outArr2[i].cost == 1) continue; // 1은 내리막길
+      result2 += 1;
+    }
+    System.out.println((int)(Math.pow(result1,2)-Math.pow(result2,2))); //8
+  }
+  static int[] p = new int[5]; //부모배열 기록
+  static boolean isUnion(int u, int v){
+    u = find(u); v = find(v); // root노드 찾기
+    if(u==v) return true; // 합집합(부모같으니까)
+    if(p[u] > p[v]) { // 하나의 집합으로 합치려는 의도일 뿐
+      int temp = u;
+      u=v; v=temp;
+    } // swap
+    p[u] += p[v]; // 자식이 많은쪽에 merge
+    p[v] = u; // 부모 기록
+    return false;
+  }
+  static int find(int x){
+    if(p[x] < 0) return x; //-1은 자신이 부모
+    return p[x] = find(p[x]); //root 까지 재귀
+  }
 
+  static class Pair3 {
+    int parent; int child; int cost;
+    public Pair3(int parent, int child, int cost){
+      this.parent=parent; this.child=child; this.cost=cost;
+    }
   }
 ```
