--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -61,6 +61,7 @@ typora-root-url: ../../..
 - 문제를 꼭 "자세히" 읽고, **"조건 잘 확인"**
   - 타입 애매하다? `long` 사용
   - 입력좌표는 `(1,1) 또는 (0,0)` 인가?? + (x,y) 형태가 `(행,열) 또는 (열,행)` 인가??
+- **필수 코드 암기 : [알고리즘 필수 코드암기]()**
 
 <br>
 
