fix: bug fix test

--- a/_posts/Coding_Test/Baekjoon_Concept/2024-02-17-(백준_필수4)알고리즘 필수 코드암기.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2024-02-17-(백준_필수4)알고리즘 필수 코드암기.md
@@ -17,6 +17,9 @@ typora-root-url: ../../..
 **코드 암기 연습을 위해 작성한다.**
 
 - 위상정렬, 플로이드, 다익스트라, 프림, 크루스칼, BFS, DFS, 순열, 조합, 부분집합
+- 참고) `{%raw%} ... {%endraw%}` 는 liquid 문법 에러 때문에 넣은것이니 무시해도 좋다
+  - {%raw%} liquid 에서는 {{ }} 를 주의해서 사용해야 한다 {%endraw%}
+
 
 <br><br>
 
@@ -98,7 +101,7 @@ typora-root-url: ../../..
  */
   public static void floyd(){
     int N=4; int M=8; int X=2; // N->X->N 경로의 최단거리 구한후 가장 오래걸리는 학생 비용 구하라
-    int[][] input = {{1,2,4},{1,3,2},{1,4,7},{2,1,1},{2,3,5},{3,1,2},{3,4,4},{4,2,3}};
+    int[][] input = {%raw%}{{1,2,4},{1,3,2},{1,4,7},{2,1,1},{2,3,5},{3,1,2},{3,4,4},{4,2,3}}{%endraw%};
     //...
 
   }
@@ -110,7 +113,7 @@ typora-root-url: ../../..
  */
   public static void dijkstra() {
     int N=4; int M=8; int X=2; // N->X->N 경로의 최단거리 구한후 가장 오래걸리는 학생 비용 구하라
-    int[][] input = {{1,2,4},{1,3,2},{1,4,7},{2,1,1},{2,3,5},{3,1,2},{3,4,4},{4,2,3}};
+    int[][] input = {%raw%}{{1,2,4},{1,3,2},{1,4,7},{2,1,1},{2,3,5},{3,1,2},{3,4,4},{4,2,3}}{%endraw%};
     //...
 
   }
@@ -123,7 +126,7 @@ typora-root-url: ../../..
     // 최악경로 비용과 최선경로 비용의 차이를 구하라.
     int N = 4;
     int M = 5;
-    int[][] input = {{0, 1, 1}, {1, 2, 0}, {1, 4, 0}, {4, 2, 1}, {3, 4, 1}, {2, 3, 0}};
+    int[][] input = {%raw%}{{0, 1, 1}, {1, 2, 0}, {1, 4, 0}, {4, 2, 1}, {3, 4, 1}, {2, 3, 0}}{%endraw%};
     //...
     
   }
@@ -136,7 +139,7 @@ typora-root-url: ../../..
     // 최악경로 비용과 최선경로 비용의 차이를 구하라.
     int N = 4;
     int M = 5;
-    int[][] input = {{0, 1, 1}, {1, 2, 0}, {1, 4, 0}, {4, 2, 1}, {3, 4, 1}, {2, 3, 0}};
+    int[][] input = {%raw%}{{0, 1, 1}, {1, 2, 0}, {1, 4, 0}, {4, 2, 1}, {3, 4, 1}, {2, 3, 0}}{%endraw%};
     //...
       
   }
@@ -275,7 +278,7 @@ typora-root-url: ../../..
  * 반드시 기억 : indegree 0이 큐 삽입시점 -> 최외곽
  */
   public static void topological(){
-    int[][] input = {{1, 3}, {2, 3}}; // output:1 2 3
+    int[][] input = {%raw%}{{1, 3}, {2, 3}}{%endraw%}; // output:1 2 3
     //...
     int N = 4; // 1,2,3 까지 범위
     int[] indegree = new int[N];
@@ -310,7 +313,7 @@ typora-root-url: ../../..
  */
   public static void floyd(){
     int N=4; int M=8; int X=2; // N->X->N 경로의 최단거리 구한후 가장 오래걸리는 학생 비용 구하라
-    int[][] input = {{1,2,4},{1,3,2},{1,4,7},{2,1,1},{2,3,5},{3,1,2},{3,4,4},{4,2,3}};
+    int[][] input = {%raw%}{{1,2,4},{1,3,2},{1,4,7},{2,1,1},{2,3,5},{3,1,2},{3,4,4},{4,2,3}}{%endraw%};
     //...
     int[][] floyd = new int[N+1][N+1];
     for(int i=1; i<=N; i++) Arrays.fill(floyd[i], Integer.MAX_VALUE/3); // 원소 더하다가 음수로 안넘어가기 위해 /3
@@ -345,7 +348,7 @@ typora-root-url: ../../..
  */
   public static void dijkstra() {
     int N=4; int M=8; int X=2; // N->X->N 경로의 최단거리 구한후 가장 오래걸리는 학생 비용 구하라
-    int[][] input = {{1,2,4},{1,3,2},{1,4,7},{2,1,1},{2,3,5},{3,1,2},{3,4,4},{4,2,3}};
+    int[][] input = {%raw%}{{1,2,4},{1,3,2},{1,4,7},{2,1,1},{2,3,5},{3,1,2},{3,4,4},{4,2,3}}{%endraw%};
     //...
     List<Pair>[] graph = new ArrayList[N+1];
     List<Pair>[] graphRev = new ArrayList[N+1];
@@ -414,7 +417,7 @@ typora-root-url: ../../..
     // 최악경로 비용과 최선경로 비용의 차이를 구하라.
     int N = 4;
     int M = 5;
-    int[][] input = {{0, 1, 1}, {1, 2, 0}, {1, 4, 0}, {4, 2, 1}, {3, 4, 1}, {2, 3, 0}};
+    int[][] input = {%raw%}{{0, 1, 1}, {1, 2, 0}, {1, 4, 0}, {4, 2, 1}, {3, 4, 1}, {2, 3, 0}}{%endraw%};
     //...
     PriorityQueue<Pair2> pq1 = new PriorityQueue<>((o1, o2) -> {
       Pair2 p1 = (Pair2)o1;
@@ -492,7 +495,7 @@ typora-root-url: ../../..
     // 최악경로 비용과 최선경로 비용의 차이를 구하라.
     int N = 4;
     int M = 5;
-    int[][] input = {{0, 1, 1}, {1, 2, 0}, {1, 4, 0}, {4, 2, 1}, {3, 4, 1}, {2, 3, 0}};
+    int[][] input = {%raw%}{{0, 1, 1}, {1, 2, 0}, {1, 4, 0}, {4, 2, 1}, {3, 4, 1}, {2, 3, 0}}{%endraw%};
     //...
     List<Pair3> edges1 = new ArrayList<>();
     List<Pair3> edges2 = new ArrayList<>();
