docs: 게시물 재포스팅

--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -61,7 +61,7 @@ typora-root-url: ../../..
 - 문제를 꼭 "자세히" 읽고, **"조건 잘 확인"**
   - 타입 애매하다? `long` 사용
   - 입력좌표는 `(1,1) 또는 (0,0)` 인가?? + (x,y) 형태가 `(행,열) 또는 (열,행)` 인가??
-- **필수 코드 암기 : [알고리즘 필수 코드암기]()**
+- **필수 코드 암기 : [알고리즘 필수 코드암기](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%984)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%95%84%EC%88%98-%EC%BD%94%EB%93%9C%EC%95%94%EA%B8%B0/)**
 
 <br>
 
