--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -175,8 +175,9 @@ typora-root-url: ../../..
     * **여러 시작점(x,y), 끝점(N,M)** 을 줘서 함수를 재사용!
   * **추가2) 2차원 "달팽이"**처럼 빙글빙글 돌때 **"범위체크+visited"**로 간단히 구현 가능하다.
     * **좌표 원복**하고 방향 전환하는 형식이 될 것이다.
-  * **추가3)** 분할정복(똑같은 크기로 분할 때) -> **좌표이동 ( + 크기** 활용 )
+  * **추가3)** **분할정복**(똑같은 크기로 분할 때) -> **좌표이동 ( + 크기** 활용 )
     * `x+=N` 이나 `y+=N` 같이 좌표 이동을 하되 **특정한 크기(N)** 을 사용한 이동
+    * **최적화 : 원하는값 있는부분으로만 분할정복**
 * EX2) **dx, dy**로 1칸씩 같던 것을 **끝까지 이동(while)**하는것 -> dx, dy를 좌표에 더할수록 해당 방향으로 계속 이동 가능하단 점을 알아두자
   * **추가1) 2048 or 모노미노도미노2** 처럼 **끝까지 이동(while) + 범위 넘으면 원복(--)** 방식 괜찮음
   * 이것을 **"하나의 함수" 로 구성**하여 "각각의 좌표나 행,열"로 **각각 재사용 추천**
