docs: LIS 내용 추가

--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -77,6 +77,7 @@ typora-root-url: ../../..
     - 아래 정리된 코드들은 **"옛날코드"** 많아서 햇갈리지 말것(스택, 큐)
   - 이분탐색 : `binarySearch, lower_bound, upper_bound` **직접 구현 방법 기억**
     - 정리해둔 이분탐색 목차 참고 -> **"[자바의 binarySearch](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%9D%B4%EB%B6%84%ED%83%90%EC%83%89binarysearch)"**
+    - 응용 문제 (LIS) -> **"[가장 긴 증가하는 부분 수열 5](https://www.acmicpc.net/problem/14003)"**
   - 해시맵 : 배열 시간초과.. 정렬.. 필요없고 키,값 형태?? **HashMap** 사용 이런느낌!
     - 해시 잘 활용한 문제 -> **[백준1620](https://www.acmicpc.net/submit/1620/73125492)**
   - 우선순위 큐 -> **[백준 나무 재테크](https://www.acmicpc.net/submit/16235/72613091), 이차원 배열...(17140)** 참고 -> **정렬 커스텀** 중요
@@ -114,7 +115,7 @@ typora-root-url: ../../..
           [백준13418](https://www.acmicpc.net/problem/13418) 의 경우 "오르막길(최악)", "내리막길(최선)"을 각각 **1, 0으로 임의로 입력**받고,  
           임의로 입력받은 간선을 **"오름차순, 내림차순"으로 따로 정렬**후 MST를 각각 진행해서 최선, 최악 비용을 구해낼 수 있다.
 - **위상정렬(코드기억)** -> 간단하니 이것도 기억해두자..! -> [위상정렬](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%9C%84%EC%83%81-%EC%A0%95%EB%A0%AC)
-- +참고) 최장 증가 부분 수열(LIS) + LCS(공통) 까지도 참고 -> increasing, common
+- +개념참고) **최장 증가 부분 수열(LIS)** + 최장 공통 부분 수열(LCS)  -> increasing, common
 
 <br>
 
@@ -232,10 +233,18 @@ typora-root-url: ../../..
       //풀이...
   }
   ```
-  
+
 - EX11) 2차원 배열에서 동일한 행,열 뿐만아니라 **"대각선" 유무 알아낼 때**
 
   - `Math.abs(col[rowNo]-col[k]) == rowNo-k` : 열값차이와 행값차이가 같다면 **"대각선"**
+
+- EX12) 참고 : 중위 표기식 -> 후위 표기식 변환법과 후위 표기식 계산방법
+
+  - `A+B*C-D/E` 를 `ABC*+DE/-` 로 변환법??
+    - **"연산자 스택"**에 **top**이 자신보다 우선순위 낮은 연산자일때까지 **pop** 후 **push** - [참고](https://www.acmicpc.net/submit/1918/55108234)
+
+  - `ABC*+DE/-` 계산법 ??
+    - **"스택"**에 'A','B','C' 넣다가 연산자('\*') 만나는순간 **B*C로 연산후** 다시 스택에 **push**
 
 
 <br>
@@ -1777,37 +1786,65 @@ static int dfs(int x, int y){
 **참고 : [DP 정리](https://bh946.github.io/algorithm/(%EA%B0%9C%EB%85%90)-Dynamic_Programming(%EB%8F%99%EC%A0%81%EA%B3%84%ED%9A%8D%EB%B2%95)/)**
 
 * **피보나치**
+  
   * `f[n] = fib[n-1] + fib[n-2]`
+  
 * **이항계수**
   * `B[i][j] = B[i-1][j-1] + B[i-1][j]`    
     `B[i][i]=1, B[i][0]=1	,if(j==i || j==0)`
+  
 * **격자경로**
   * `P[i][j] = P[i-1,j] + P[i,j-1]`  
     `P[1,j] = P[i,1] = 1`
   * 심화 : 표시된 곳을 2회 지나야 하는 경우? 3차원으로 DP 선언  
     EX : `(표시없는길 개수)/(표시1번 지난길 개수)/(표시2번 지난길 개수)` 
+  
 * **거스름돈**
   * `C[i][j] = min( C[i, j–D[i]] + 1, C[i-1, j] )	,if D[i]<=j`  
     `C[i][j] = C[i-1][j]	,if D[i]>j`  
     `C[i][j] = 0	,if j==0`
   * 참고 : D는 Denom 으로써 액면가(화폐 단위 : 1원 10원 등등)을 의미
+  
 * **연쇄 행렬곱셈(BOJ11049)**
   * **M\[i][j] = <img src="/images/2023-01-11-(백준_필수3)알고리즘 템플릿 - java/image-20230609172128684.png" alt="image-20230609172128684" style="zoom: 80%;" />	,if i<j**
   * **M\[i][j] = 0	,if i==j**
+  
 * **LCS(BOJ6251)**
   * `C[i][j] = max( C[i-1][j], C[i][j-1] )	,if A[i]!=B[j]`  
     `C[i][j] = C[i-1][j-1] + 1	,if A[i]==B[j]`  
     `C[i][j] = 0	,if i==0 || j==0`
   * **Find a Longest Common Subsequence** 제일 긴 공통된 부분 문자열을 의미하며,   
     A문자열과 B문자열이 주어졌을때 이들의 LCS를 구한다는 의미이다.
+  
+* **LIS(BOJ2565)**
+
+  * 핵심 : **i번째 인덱스에서 끝나는 최장 증가 부분 수열 마지막에 arr[k] 추가했을 때 LIS 길이**와 **기존 length[k] 값**을 비교
+
+  * ```java
+    // length[]의 각 요소값은 최장 증가 부분 수열의 개수
+    for (int k = 0; k < n; k++) {
+        length[k] = 1;
+        for (int i = 0; i < k; i++) {
+            if(arr[i] < arr[k]) {
+                length[k] = max(length[k], length[i] + 1);
+            }
+        }
+    }
+    ```
+
+  * **Longest Increasing Subsequence** 각 원소가 이전 원소보다 큰 최장 증가 부분 수열을 의미
+
 * **OBST(Optimal Binary Search Tree)**
+
   * <img src="/images/2023-01-11-(백준_필수3)알고리즘 템플릿 - java/DRW00000bc84efc.gif" alt="img"  /> 
   * ''키''의 검색 빈도수(즉, 확률)를 받아서 BST의 최적인 트리를 구하는 것
     * WHY? 빈도수 높은 키값이 루트와 가까울수록 더욱 효율적이기 때문에 사용!
     * 다만, 이와 해당된 문제를 풀어본적이 없어서 **그냥 개념만 이해하고 넘어간다.**
+
 * **0-1 Knapsack(BOJ12865)**
   * `max( P[i-1][w], pi + P[i-1][w-wi] )	,if wi<=w`  
     `P[i][w] = P[i-1][w]	,if wi>w`
+
 * **프리랜서의 일정 정하기(SWEA4052)**
   * `OPT[j] = max ( OPT[j-1], w[j] + OPT[p(j)] )`
     * OPT[j-1] : 일정 j 선택X
@@ -1816,18 +1853,22 @@ static int dfs(int x, int y){
       * w(j) : 일정 j의 비용
     * BOJ는 없고 **SWEA** 에 **4052** 문제로 존재
       * 참고로 문제에 그림 조금 잘못 그려져 있음.
+
 * **완전정보 게임(coin move game)**
   * Nim 게임을 의미 - [바둑돌 가져가기](https://bh946.github.io/algorithm/(%EA%B0%9C%EB%85%90)-NIM_GAME(%ED%95%84%EC%8A%B9%EA%B2%8C%EC%9E%84)/), [coin move game](https://bh946.github.io/algorithmtest/(%EC%88%98%EC%97%85)Coin-Move-Game/), [coin game](https://bh946.github.io/algorithmtest/(%EC%88%98%EC%97%85)Coin-Game/), [card game](https://bh946.github.io/algorithmtest/(%EC%88%98%EC%97%85)Card-Game/)
   * "바둑돌 가져가기, coin move game" 는 확실히 이해하는것을 권장
+
 * **제한된 비트 스트링의 개수**
   * `S[k] = S[k-1] + S[k-2]`
   * 이건 너무 쉬운 풀이인데, 비트 스트링 개수 세는 아이디어는 기록하면 좋을듯 해서
   * **참고 : [제한된 비트 스트링의 개수](https://bh946.github.io/algorithm/(%EA%B0%9C%EB%85%90)-Dynamic_Programming(%EB%8F%99%EC%A0%81%EA%B3%84%ED%9A%8D%EB%B2%95)/#%EC%A0%9C%ED%95%9C%EB%90%9C-%EB%B9%84%ED%8A%B8-%EC%8A%A4%ED%8A%B8%EB%A7%81%EC%9D%98-%EA%B0%9C%EC%88%98)**
+
 * **최대 공백 정사각형(SWEA4062)**
   * `LES[x][y] = min( LES[x-1][y-1], LES[x][y-1], LES[x-1][y] ) + 1`  
     `LES[x][y] = 1	if 첫번째 행or열이 비었을때`  
     `LES[x][y] = 0	if 비어있지 않다면`
   * LES\[x][y] 는 공백 정사각형 크기이며, [x,y]는 해당 정사각형의 우측하단 좌표를 의미
+
 * **위상정렬 + DP(BOJ2056)**
   * 위상정렬과 DP는 밀접한 관계가 있는데, 해당 문제를 풀어서 느껴볼 것
   * **참고 : [위상정렬과 DP관계](https://bh946.github.io/algorithm/(%EA%B0%9C%EB%85%90)-Dynamic_Programming(%EB%8F%99%EC%A0%81%EA%B3%84%ED%9A%8D%EB%B2%95)/#%EC%9C%84%EC%83%81%EC%A0%95%EB%A0%AC--dp)**
@@ -2140,9 +2181,9 @@ System.out.println(sb);
 static int n=5;
 static int[] a = {1,2,2,2,3};
 // 분할정복 -> index 활용방식
-public static int binarySearch(int target) {
+public static int binarySearch(int target, int len) { // len = n-1 이 들어올거임
     int st = 0;
-    int en = n-1;
+    int en = len;
     while(st <= en) { // 찾기위해 '=='까지 포함
         int mid = (st+en)/2;
         if(a[mid] < target) st = mid+1;
@@ -2217,6 +2258,37 @@ public static int getID(char c) {
 		return c - 'A';
 	return c - 'a' + 26; // 26은 A~Z 이후에 자리를 두기 위함
 } // 아스키코드는 A가 a보다 작음
+```
+
+<br>
+
+### 2. 최장 증가 부분 수열(LIS)
+
+[이분의 글을 참고](https://chanhuiseok.github.io/posts/algo-49/) -> **그림**보면 이해하기 쉬움!
+
+**정렬을 하지 않고!!** 바로 이분 탐색 응용! -> `lower_bound` 사용 + `역추적` 사용
+
+- 참고) **N이 100**정도면 **DP**로 해결가능 -> DP는 매우 간단
+
+<img src="https://github.com/BH946/bh946.github.io/assets/80165014/5fa95226-3206-4a96-94aa-04e0b435fcec" alt="image" style="zoom: 33%;" /> 
+
+```java
+int[] check = new int[N+1]; // 역추적
+int[] outArr = new int[N+1];
+check[0]=0;
+outArr[0]=inArr[0]; //init
+int j = 0; //init -> size
+for(int i=1; i<N; i++){
+    if(outArr[j] < inArr[i]) {
+        outArr[j+1] = inArr[i]; // update
+        check[i]=j+1;
+        j+=1;
+    }else{
+        int idx = lower_bound(inArr[i], j, outArr);
+        outArr[idx] = inArr[i]; // update
+        check[i]=idx;
+    }
+}
 ```
 
 <br><br>
