--- a/_posts/Coding_Test/Baekjoon_Concept/2024-02-17-(백준_필수4)알고리즘 필수 코드암기.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2024-02-17-(백준_필수4)알고리즘 필수 코드암기.md
@@ -1,7 +1,7 @@
 ---
 title:  "[백준_필수4]알고리즘 필수 코드암기"
 categories : [Baekjoon]
-tag : [백준, 프로그래머스, 알고리즘 문제풀이, 위상정렬, 플로이드, 다익스트라, 프림, 크루스칼, BFS, DFS, 순열, 조합, 부분집합, 완전탐색, 브루트포스]
+tag : [백준, 프로그래머스, 알고리즘 문제풀이, 위상정렬, 플로이드, 다익스트라, 프림, 크루스칼, BFS, DFS, 순열, 조합, 부분집합, 완전탐색, 브루트포스, 이분탐색]
 toc: trues
 toc_sticky: true
 author_profile: false
@@ -16,7 +16,7 @@ typora-root-url: ../../..
 
 **코드 암기 연습을 위해 작성한다.**
 
-- 위상정렬, 플로이드, 다익스트라, 프림, 크루스칼, BFS, DFS, 순열, 조합, 부분집합
+- 위상정렬, 플로이드, 다익스트라, 프림, 크루스칼, BFS, DFS, 순열, 조합, 부분집합, 이분탐색
 
 <br><br>
 
@@ -139,6 +139,38 @@ typora-root-url: ../../..
     int[][] input = {%raw%}{{0, 1, 1}, {1, 2, 0}, {1, 4, 0}, {4, 2, 1}, {3, 4, 1}, {2, 3, 0}}{%endraw%};
     //...
       
+  }
+```
+
+<br>
+
+**이분탐색**
+
+```java
+/**
+ * 이분탐색 -> 자바에서 제공하는 Arrays.binarySearch 가 존재하지만, lower_bound, upper_bound
+ * 경우에는 직접 구현해줘야 하므로 "직접 구현방식"을 기억해둘것
+ */
+  static int n=5;
+  static int[] a = {1,2,2,2,3};
+  // 분할정복 -> index 활용방식
+  public static int binarySearch(int target, int len) {
+    int st = 0;
+    int en = len;
+	// ...
+    return -1; // 못찾음
+  }
+  public static int lower_bound(int target, int len) {
+    int st = 0;
+    int en = len;
+	// ...
+    return st; 
+  }
+  public static int upper_bound(int target, int len) {
+    int st = 0;
+    int en = len;
+	// ...
+    return st;
   }
 ```
 
@@ -559,3 +591,49 @@ typora-root-url: ../../..
     }
   }
 ```
+
+<br>
+
+**이분탐색**
+
+```java
+/**
+ * 이분탐색 -> 자바에서 제공하는 Arrays.binarySearch 가 존재하지만, lower_bound, upper_bound
+ * 경우에는 직접 구현해줘야 하므로 "직접 구현방식"을 기억해둘것
+ */
+  static int n=5;
+  static int[] a = {1,2,2,2,3};
+  // 분할정복 -> index 활용방식
+  public static int binarySearch(int target, int len) { // len = n-1 이 들어올거임
+    int st = 0;
+    int en = len;
+    while(st <= en) { // 찾기위해 '=='까지 포함
+      int mid = (st+en)/2;
+      if(a[mid] < target) st = mid+1;
+      else if(a[mid] > target) en = mid-1;
+      else return mid; // 찾음
+    }
+    return -1; // 못찾음
+  }
+  public static int lower_bound(int target, int len) {
+    int st = 0;
+    int en = len;
+    while(st < en) {
+      int mid = (st+en)/2;
+      if(a[mid] < target) st = mid+1; // target 발견시 st는 그 첫 위치 유지됨
+      else en = mid; // (a[mid] >= target) -> en=mid 반복시 target 끝이 보장됨
+    }
+    return st; // 그림보면 알겠지만 결국 'st=mid=en' 이 되므로 en 리턴도 상관없을 거임
+  }
+  public static int upper_bound(int target, int len) {
+    int st = 0;
+    int en = len;
+    while(st < en) {
+      int mid = (st+en)/2;
+      if(a[mid] <= target) st = mid+1; // '초과 값 위치' 구하는게 목표니까 mid+1 한것
+      else en = mid; // (a[mid] > target)
+    }
+    return st;
+  }
+```
+
