add: category 추가 book

--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -2291,6 +2291,16 @@ for(int i=1; i<N; i++){
 }
 ```
 
+<br>
+
+### 3. N=40 범위 해결 아이디어
+
+[백준1208_부분수열의 합 2](https://www.acmicpc.net/problem/1208) 문제의 경우 모든 경우의수를 따지면 2^40 으로 시간초과가 발생한다.
+
+따라서 이를 N/2 로 절반씩 나눠서 구하면 2^20, 2^20 으로 대략 2백만 밖에 되지 않으므로 시간초과를 벗어날 수 있다.
+
+- 참고 : [잘 정리하신 분](https://hyeo-noo.tistory.com/128)
+
 <br><br>
 
 ## 투 포인터
