--- a/_posts/Knowledge/Book/2023-02-20-자바 병렬 프로그래밍 - 1부.md
+++ b/_posts/Knowledge/Book/2023-02-20-자바 병렬 프로그래밍 - 1부.md
@@ -1,6 +1,6 @@
 ---
 title: "자바 병렬 프로그래밍 - 1부"
-categories : [X]
+categories : [Book]
 tag : [자바, 병렬, 스레드, 멀티스레드, 동시성, 락]
 toc: true
 toc_sticky: true
@@ -35,7 +35,7 @@ typora-root-url: ../../..
 
 **요약**
 
-
+<img src="https://github.com/BH946/bh946.github.io/assets/80165014/fc610824-743c-4f1c-bf4a-494c663bedc3" alt="image" style="zoom:50%;" />  
 
 <br><br>
 
