--- a/_posts/Knowledge/Book/2023-02-20-자바 병렬 프로그래밍 - 1부.md
+++ b/_posts/Knowledge/Book/2023-02-20-자바 병렬 프로그래밍 - 1부.md
@@ -28,6 +28,7 @@ typora-root-url: ../../..
 - 병렬 프로그래밍 문제점을 피하는 방법
 - 스레드 안전한 클래스 작성법
 - 스레드 안전성 확인법
+- 자바에서 제공하는 스레드 안전한 클래스나 동기화 클래스 등등
 
 <br><br>
 
