--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -115,6 +115,8 @@ typora-root-url: ../../..
           [백준13418](https://www.acmicpc.net/problem/13418) 의 경우 "오르막길(최악)", "내리막길(최선)"을 각각 **1, 0으로 임의로 입력**받고,  
           임의로 입력받은 간선을 **"오름차순, 내림차순"으로 따로 정렬**후 MST를 각각 진행해서 최선, 최악 비용을 구해낼 수 있다.
 - **위상정렬(코드기억)** -> 간단하니 이것도 기억해두자..! -> [위상정렬](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%9C%84%EC%83%81-%EC%A0%95%EB%A0%AC)
+  - outArr배열을 dp배열처럼 사용 : bottom-top 방식DP의 **"for문"** 이 **"위상정렬"** 로 **치환**으로 이해하자
+
 - +개념참고) **최장 증가 부분 수열(LIS)** + 최장 공통 부분 수열(LCS)  -> increasing, common
 
 <br>
@@ -183,7 +185,7 @@ typora-root-url: ../../..
   * **추가1) 2048 or 모노미노도미노2** 처럼 **끝까지 이동(while) + 범위 넘으면 원복(--)** 방식 괜찮음
   * 이것을 **"하나의 함수" 로 구성**하여 "각각의 좌표나 행,열"로 **각각 재사용 추천**
   * **"오른쪽 방향일때 오른쪽부터 접근해야하는가"** 이런것도 꼭 고려!
-* EX3) **투포인터**의 개념을 잘 생각 -> 두개의 배열을 인덱스 따로 하여 따로 동작하고 싶을때도 있기에 이 개념을 기억해두자
+* EX3) **투포인터**의 개념을 잘 생각 -> 두개의 배열을 인덱스 따로 하여 따로 동작하고 싶을때도 있기에 이 개념을 기억해두자 -> [용액_2467 백준](https://www.acmicpc.net/problem/2467)
 * EX4) **배열의 인덱스를 실제 숫자**로 치환하여 생각하는 방식 -> 숫자 빈도수 구하거나 등등...
 * EX5) **"빈도수"** 구할때 List[] 도 있지만, **HashMap** 에 담으려 노력해보자 (자료구조 활용)
 
@@ -2212,6 +2214,31 @@ public static int upper_bound(int target, int len) {
     }
     return st;
 }
+/**
+추가) 응용ver -> 백준2467 - 용액 -> 이해안되면 문제를 읽어볼것
+ * 기존 문제점 : lower_bound 는 target 못 찾으면 그 뒤의 값을 가져오는데 정작 필요한건 앞의 값일 수도 있다. (문제 특성상) 그렇다고 앞의 값을 가져오게 로직을 수정해도 그 뒤의 값이 또 필요할 수도 있다.
+ * 결론 : 따라서 이분탐색을 사용하되 내부 로직에는 두 값의 합(sum)에 따라 갱신해야 한다.
+ * st 가 커질수록 합이 커질거고, en 이 작아질수록 합이 작아지는걸 생각
+ * 따라서 sum < 0 과 sum > 0 과 sum == 0 때로 나눠 구현하자.
+ * 또한 기존 문제점에서 언급했듯이, 찾는값이 없을때 앞의 값이 클수도 뒤의 값이 클수도 있어서
+ * 찾는 과정에서 계속 outArr(정답값)도 갱신해야한다.
+ */
+for (int i = 0; i < N; i++) { // NlogN 복잡도
+    int st = i+1;
+    int en = N-1;
+    while (st <= en) {
+        int mid = (st+en)/2;
+        int temp = inArr[i] + inArr[mid];
+        if(sum >= Math.abs(temp)) {
+            sum = Math.abs(temp);
+            outArr[0] = inArr[i];
+            outArr[1] = inArr[mid];
+        }
+        if(temp < 0) st = mid+1;
+        else if(temp > 0) en = mid-1;
+        else break; // temp == 0 을 찾은것
+    }
+}
 ```
 
 <br>
@@ -2308,7 +2335,7 @@ for(int i=1; i<N; i++){
 **투 포인터는 배열에서 원래 이중 for문으로 O(N^2)에 처리되는 작업을 2개 포인터의 움직임으로 O(N)에 해결하는 알고리즘**
 
 * 이분 탐색으로 투 포인터 문제를 풀던가, 투 포인터 문제를 이분 탐색으로 풀 수 있는 경우가 많다.
-* 예시로 **[수 고르기](https://www.acmicpc.net/problem/2230)** 를 풀어본다.
+* 예시로 **[수 고르기](https://www.acmicpc.net/problem/2230)** 를 풀어본다 -> **[용액](https://www.acmicpc.net/problem/2467)** 도 있는데 이분탐색이나 투포인터로 풀 수 있다.
   * 아래 코드는 2개의 포인터를 적절히 조건에 맞게 움직여서 해를 구하는 모습이다.
   * 문제 특성상 "두 수의 차이가 M이상" 인 숫자들을 구하는게 중요하므로,
   * j 가 while문으로 한번에 커져도 그 사이값은 i의 +-M 범위를 벗어나질 않기 때문에,
@@ -2324,6 +2351,43 @@ for(i = 0; i<N; i++){
     if(j==N) break;
     result = Math.min(result, Math.abs(inArr[i]-inArr[j]));
 }
+```
+
+<br>
+
+```java
+// BOJ 2467
+/**
+ * - 아이디어
+ *     정렬된 원소의 가장 왼쪽과 오른쪽부터 원소를 뽑아보겠습니다.
+ *     즉, 두 개의 포인터 l, r의 위치를 0, N - 1로 선택하고, 이 두 포인터가 가리키는 값을 항상 채택하는 전략을 사용하겠습니다. 우리는 이 두개의 포인터를 적절히 이동시켜 0에 가까운 값을 항상 유지할 수 있고, 정답을 찾을 수 있습니다.
+ *
+ *     1. v[l] + v[r] == 0 일 때
+ *     우리가 찾던 두 개의 값이므로 바로 이 두 값을 출력하면 끝입니다.
+ *     2. v[l] + v[r] < 0 일 때
+ *     두 값의 합이 음수면, l이라는 포인터를 오른쪽으로 이동(l++)해서 이 합을 증가시킬 수 있습니다.
+ *     3. v[l] + v[r] > 0 일 때
+ *     같은 원리로 r 포인터를 왼쪽으로 이동해서 이 합을 감소시킬 수 있습니다.
+ *
+ *     이를 두 포인터가 만나기 전까지(l < r) 반복하면 문제를 해결할 수 있습니다.
+ */
+l=0; r=N-1; // 투포인터
+outArr = new int[2];
+int sum = Integer.MAX_VALUE;
+while(l<r) {
+    int temp = Math.abs(inArr[l]+inArr[r]); //크기로 보기 위해 절대값
+    if(sum >= temp) {
+        sum = temp;
+        outArr[0] = inArr[l];
+        outArr[1] = inArr[r];
+    }
+    if(inArr[l]+inArr[r] == 0) break;
+    else if(inArr[l]+inArr[r] < 0) l++;
+    else if(inArr[l]+inArr[r] > 0) r--;
+}
+if(l>=r) l--; //원복
+//output
+System.out.println(outArr[0]+" "+outArr[1]);
 ```
 
 <br><br>
@@ -3063,6 +3127,7 @@ public static void main(String[] args) throws IOException {
 
 * 단순히 부모 자식관계를 위배하지만 않으면 되므로 생각보다 간단한 정렬이다.
 * indegree가 0인게 제일 부모이며 최외각에 존재하는건 자명하다.
+* 위상정렬은 특히 DP 관점으로도 볼 수 있는데 BOJ1005 를 보자.
 
 ![image-20230506001732475](/images/2023-01-03-(백준_필수3)알고리즘 템플릿 - cpp/image-20230506001732475.png) 
 
@@ -3107,6 +3172,26 @@ public static void main(String[] args) throws Exception {
     System.out.println(sb);
 }
 
+// BOJ 1005
+/**
+ * outArr배열을 dp배열처럼 사용
+ * bottom-top 방식의 "for문" 이 "위상정렬" 로 치환으로 이해하자
+ */
+while (!qu.isEmpty()) {
+    int size = qu.size();
+    for (int s = 0; s < size; s++) {
+        int cur = qu.poll();
+        for (int nxt : graph[cur]) {
+            //dp처럼 값 갱신
+            outArr[nxt] = Math.max(outArr[cur] + buildTime[nxt], outArr[nxt]);
+            //큐 삽입시점
+            inDegree[nxt]--;
+            if (inDegree[nxt] == 0) {
+                qu.offer(nxt);
+            }
+        }
+    }
+}
 ```
 
 <br>
