--- a/_posts/Coding_Test/Baekjoon_Concept/2024-02-17-(백준_필수4)알고리즘 필수 코드암기.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2024-02-17-(백준_필수4)알고리즘 필수 코드암기.md
@@ -172,6 +172,20 @@ typora-root-url: ../../..
 	// ...
     return st;
   }
+/**
+추가) 응용ver -> 백준2467 - 용액 -> 이해안되면 문제를 읽어볼것
+ * 기존 문제점 : lower_bound 는 target 못 찾으면 그 뒤의 값을 가져오는데 정작 필요한건 앞의 값일 수도 있다. (문제 특성상) 그렇다고 앞의 값을 가져오게 로직을 수정해도 그 뒤의 값이 또 필요할 수도 있다.
+ * 결론 : 따라서 이분탐색을 사용하되 내부 로직에는 두 값의 합(sum)에 따라 갱신해야 한다.
+ * st 가 커질수록 합이 커질거고, en 이 작아질수록 합이 작아지는걸 생각
+ * 따라서 sum < 0 과 sum > 0 과 sum == 0 때로 나눠 구현하자.
+ * 또한 기존 문제점에서 언급했듯이, 찾는값이 없을때 앞의 값이 클수도 뒤의 값이 클수도 있어서
+ * 찾는 과정에서 계속 outArr(정답값)도 갱신해야한다.
+ */
+for (int i = 0; i < N; i++) { // NlogN 복잡도
+    int st = i+1;
+    int en = N-1;
+	// ...
+}
 ```
 
 <br><br>
@@ -635,5 +649,30 @@ typora-root-url: ../../..
     }
     return st;
   }
+/**
+추가) 응용ver -> 백준2467 - 용액 -> 이해안되면 문제를 읽어볼것
+ * 기존 문제점 : lower_bound 는 target 못 찾으면 그 뒤의 값을 가져오는데 정작 필요한건 앞의 값일 수도 있다. (문제 특성상) 그렇다고 앞의 값을 가져오게 로직을 수정해도 그 뒤의 값이 또 필요할 수도 있다.
+ * 결론 : 따라서 이분탐색을 사용하되 내부 로직에는 두 값의 합(sum)에 따라 갱신해야 한다.
+ * st 가 커질수록 합이 커질거고, en 이 작아질수록 합이 작아지는걸 생각
+ * 따라서 sum < 0 과 sum > 0 과 sum == 0 때로 나눠 구현하자.
+ * 또한 기존 문제점에서 언급했듯이, 찾는값이 없을때 앞의 값이 클수도 뒤의 값이 클수도 있어서
+ * 찾는 과정에서 계속 outArr(정답값)도 갱신해야한다.
+ */
+for (int i = 0; i < N; i++) { // NlogN 복잡도
+    int st = i+1;
+    int en = N-1;
+    while (st <= en) {
+        int mid = (st+en)/2;
+        int temp = inArr[i] + inArr[mid];
+        if(sum >= Math.abs(temp)) {
+            sum = Math.abs(temp);
+            outArr[0] = inArr[i];
+            outArr[1] = inArr[mid];
+        }
+        if(temp < 0) st = mid+1;
+        else if(temp > 0) en = mid-1;
+        else break; // temp == 0 을 찾은것
+    }
+}
 ```
 
