--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -1874,6 +1874,41 @@ static int dfs(int x, int y){
 * **위상정렬 + DP(BOJ2056)**
   * 위상정렬과 DP는 밀접한 관계가 있는데, 해당 문제를 풀어서 느껴볼 것
   * **참고 : [위상정렬과 DP관계](https://bh946.github.io/algorithm/(%EA%B0%9C%EB%85%90)-Dynamic_Programming(%EB%8F%99%EC%A0%81%EA%B3%84%ED%9A%8D%EB%B2%95)/#%EC%9C%84%EC%83%81%EC%A0%95%EB%A0%AC--dp)**
+  
+* **TSP(외판원 순회)**
+
+  * `dp[i][j]` 의미
+
+    * `i` : 내가 지금까지 방문한 마을을 수로 표현
+    * `j` : 현재 내가 있는 마을
+    * `dp[i][j]`-> 이런 상태가 완성되었을 때의 최솟값 (=total_cost) 
+
+  * ```java
+    //dp init
+    int dp[][] = new int[(1 << N)][N];
+    /* fill dp to Integer.INT_MAX; */
+    dp[1][0] = 0; //0번 마을을 방문했고(1), 현재 0번 마을에 있음(0)
+    
+    //dp
+    for(int i = 1; i < (1 << N); i++){ //현재 내가 방문한 마을의 비트 값, visited_array
+    	for(int j = 0; j < N; j++){ //현재 내가 서 있는 마을, now_pos
+    		if(dp[i][j] == Integer.INT_MAX) continue; //불가능한 상태를 보려고 함
+    		for(int k = 0; k < N; k++){ //내가 다음으로 방문하려는 마을, next_pos
+    			if((i & (1 << k)) > 0) continue;
+    			//i는 방문했던 마을의 비트 값이었음. 그런데 지금 가려는
+    			//k번 마을이 이미 이 비트에 있으면 갈 수 없으므로 continue 처리
+    			dp[i | (1 << k)][k] = Math.min(dp[i | (1 << k)][k], dp[i][j] + cost[j][k]);
+    			//k번 마을의 비트를 채우면서 k번으로 이동해야 하므로 [i | (1 << k)][k]
+    			//현재 나의 최소값 (dp[i][j]) + 이동 비용(cost[j][k])을 다음 상태로 전달
+    		}
+    	}
+    }
+    int result = Integer.INT_MAX;
+    for(int i = 1; i < N; i++){
+    	result = Math.min(result, dp[(1 << N) - 1][i] + cost[i][0]);
+    } //N개의 비트를 모두 채운 상태 = (1 << N) - 1 로 표현 가능.
+    ```
+
 
 <br><br>
 
