docs: 그래프 사이클 정리

--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -45,6 +45,7 @@ typora-root-url: ../../..
   - 불가능하다면, 혹시 적절한 **자료구조**는??
   - 또는 완.탐 생각할 필요없이 **"단순구현"** 인지??
   - 복잡도 너무큰데 해결안되면 **"DP(for, memoi)"** 고려 -> **"[DP 여러가지 유형](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#dp-%EB%8B%A4%EC%96%91%ED%95%9C-%EC%9C%A0%ED%98%95)"**
+    - **DP, 그리디**를 함께 고려하면 좋은데 그리디는 "반례가없다"를 증명하는것이 어려워서 "확신"이 없으면 PASS 하는것을 추천
   - **최단거리** 같으면 **"BFS와 다익스트라, 플로이드"** 고려 (각각 상황에 맞게 사용하게 됨)
     - [최단 경로 트리](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%B5%9C%EB%8B%A8-%EA%B2%BD%EB%A1%9C-%ED%8A%B8%EB%A6%AC), [보는김에 이것도 확인 -> 최소 신장 트리](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%B5%9C%EC%86%8C-%EC%8B%A0%EC%9E%A5-%ED%8A%B8%EB%A6%ACmst)
   - **"그래프"**, 트리 종류 같다면?? 아래 필수 고려(+BFS, DFS)
@@ -93,7 +94,9 @@ typora-root-url: ../../..
     - 힙 - "완전이진트리" + "위 아래 관계" / 힙 응용 - 우선순위 큐
     - 이진검색트리(=BST) - "좌 우 관계"(정렬유지) / + RBT(정렬유지)
     - 이진트리 - 자식2개씩 / 포화이진트리 - 꽉찬것 / 완전이진트리 - "왼쪽"부터 이진트리
-  - **그래프 -> "중복방문(visited) 주의"**
+  - **그래프 -> "중복방문(visited) 주의"** -> **사이클 탐색(찾기) : visited[], finished[] 사용** -> [백준9466_텀 프로젝트](https://www.acmicpc.net/problem/9466)
+    - dfs(1) 실행 : dfs(1)->dfs(2)->dfs(3)->dfs(1) 사이클때 **dfs(1) 시점에 finished[]가 false라서** 사이클 확인이 가능   
+      dfs(3)->dfs(2)->dfs(1) 순서로 탐색 종료 처리됨(=finished[]가 true되는 순서)
   - **최단경로트리 vs 최소신장트리**
     - 비슷한 것 같지만 "서로를 보장(관계)하지 않음"   
       -> 최단경로라면 꼭 최소신장이고 이런 관계까지 보장하지는 않는다는 것
@@ -116,7 +119,6 @@ typora-root-url: ../../..
           임의로 입력받은 간선을 **"오름차순, 내림차순"으로 따로 정렬**후 MST를 각각 진행해서 최선, 최악 비용을 구해낼 수 있다.
 - **위상정렬(코드기억)** -> 간단하니 이것도 기억해두자..! -> [위상정렬](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%9C%84%EC%83%81-%EC%A0%95%EB%A0%AC)
   - outArr배열을 dp배열처럼 사용 : bottom-top 방식DP의 **"for문"** 이 **"위상정렬"** 로 **치환**으로 이해하자
-
 - +개념참고) **최장 증가 부분 수열(LIS)** + 최장 공통 부분 수열(LCS)  -> increasing, common
 
 <br>
@@ -539,7 +541,13 @@ Intro에서도 언급했지만, 본인의 경우 **완.탐 복잡도**라면 **"
 
 ### 비트연산
 
-참고 정도로 알아두자.
+참고 정도로 알아두자 -> **비트마스킹+메모이제이션(DP) 로 방문배열 대신 비트마스킹을 써야하는 경우가 있다**
+
+- 예를들어 `dp[i | 1<<k]` 같이 **메모이제이션의 매개변수**로 사용하는경우 일반 방문배열(visited[])로는 할 수 없다. 
+- 아마 가능하다 해도 메모리나 시간초과가 뜨게 로직을 구현해야 할것이다.
+- 따라서 **"dp의 매개변수로 비트마스킹을 사용하는 경우"** 로 기억하자. -> [백준-외판원 순회](https://www.acmicpc.net/problem/2098)
+
+<br>
 
 기본 비트연산 방법은 구글에 검색해서 확인.
 
@@ -547,6 +555,10 @@ Intro에서도 언급했지만, 본인의 경우 **완.탐 복잡도**라면 **"
 
 - `2 << 3` 이면 2*2^3
 - `2 >> 3` 이면 2/2^3
+  - `1<<3` 이면 k=2^3 => 1*2^3 = 8
+  - `2<<3` 이면 k=2^3 => 2*2^3 = 16
+  - `3<<3` 이면 k=2^3 => 3*2^3 = 24
+
 
 `&` : 특정 자리가 0인지 1인지 확인하고 싶을 때 사용
 
@@ -1877,12 +1889,14 @@ static int dfs(int x, int y){
   
 * **TSP(외판원 순회)**
 
-  * `dp[i][j]` 의미
+  * 2가지 방법(=분기한정법, DP) 해결가능하며 아래에서 "비트마스크+dp" 방식을 소개한다.
 
+  * `dp[i][j]` 의미
+  
     * `i` : 내가 지금까지 방문한 마을을 수로 표현
     * `j` : 현재 내가 있는 마을
     * `dp[i][j]`-> 이런 상태가 완성되었을 때의 최솟값 (=total_cost) 
-
+  
   * ```java
     //dp init
     int dp[][] = new int[(1 << N)][N];
@@ -2791,6 +2805,38 @@ static void bfs(int n) {
 1->2->4->3
 1->2->3->4
 */
+```
+
+<br>
+
+### 2. 그래프 사이클 탐색(순회)
+
+dfs(1) 실행가정 : `dfs(1)->dfs(2)->dfs(3)->dfs(1)` 사이클형성 때 **dfs(1) 시점에 finished[]가 false라서** 사이클 확인이 가능
+
+dfs(3)->dfs(2)->dfs(1) 순서로 탐색 종료 처리됨(=finished[]가 true되는 순서)
+
+* 사이클 찾는 문제 -> [백준16724 피리 부는 사나이](https://www.acmicpc.net/problem/16724)
+
+* 사이클 아닌것을 찾는 문제도 참고 -> [백준9466_텀 프로젝트](https://www.acmicpc.net/problem/9466)
+
+```java
+static void dfs(int node)
+{
+  // 해당 노드가 몇번째에 방문되었는지 기록
+  discovered[node] = node_order++;
+
+  for (int nxt: graph[node])
+  {
+    if (discovered[nxt] == -1) //방문안한 경우
+      dfs(nxt);
+    else if (!finished[nxt])
+      ++cycle;
+    // else는 cross edge인 경우 : Back edge나 Forward edge가 아닌 a->b로의 간선
+  }
+
+  // 해당 노드의 함수 호출이 종료되었음을 명시
+  finished[node] = true;
+}
 ```
 
 <br><br>
